gcc/testsuite/rust/rustc/ui/issues/issue-45087-unreachable-unsafe.rs
fn main() {
    return;
    *(1 as *mut u32) = 42;
// { dg-error ".E0133." "" { target *-*-* } .-1 }
}

